k8s/apps/woodpecker-ci/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woodpecker-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: nginx
  tls:
    - secretName: tls-ci.lly.sh
      hosts:
        - ci.lly.sh
  rules:
    - host: ci.lly.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: woodpecker-server
                port:
                  name: http
